-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
None
-
5.3.2
-
None
-
openSUSE 13.1
Qt 5.3.2 (Installed from Qt5 repo. Qt4 Designer is not affected.)
KDE 4.14.3 or KDE5.
"Form" (layout) and "Tools" toolbar icons are missing (having some default icon) when Designer is used under KDE. In the Design view of Qt Creator only the "Form" toolbar's icons are missing. Happens in KDE4 and KDE5, but not under other window managers. KDE icon theme doesn't matter (whether default or other).
I'm not sure if Qt Designer or KDE or distribution (openSUSE) bug. It happens on Arch Linux too:
https://bugs.archlinux.org/task/42392 though they couldn't reproduce, and successfully blamed it on a faulty HDD. ![]()
- is duplicated by
-
QTCREATORBUG-15535 Icons missing from the Forms designer
-
- Closed
-
-
QTCREATORBUG-16362 Missing icons in QT Designer
-
- Closed
-
-
QTBUG-47245 [REG: 5.4->5.5] [Linux] When running Designer then a lot of the icons look the same in the toolbar
-
- Closed
-
- relates to
-
QTCREATORBUG-15199 Missing icons
-
- Closed
-