Qt Designer: No longer load layout icons from the icon theme.

It may happen that all layout icons look identical due to the lookup
algorithm falling back to generic icons. For example, for both
"designer-horizontal-layout" and "designer-vertical-layout"
an identical icon "designer" may be returned.

Task-number: QTBUG-43021
Task-number: QTCREATORBUG-15199
Change-Id: I7820566d38093381c9e3e1386b769a7200d67843
Reviewed-by: Friedemann Kleint <Friedemann.Kleint@theqtcompany.com>